# discrete-math-MM-2025-2026

./: .gitignore  1462.cpp  3419.kt  802.cpp  CMakeLists.txt  Cargo.toml  README.md  main.cpp  settings.gradle.kts
NetAnalisys/: .gitignore  Cargo.toml
NetAnalisys/src/: graph.rs  main.rs
NetAnalisys/src/analysis/: basic.rs  cluster_evaluation.rs  connectivity.rs  degree.rs  diameter.rs  mod.rs  robustness.rs  triangle_counter.rs
NetAnalisys/src/graph/: mod.rs  traversal.rs
NetAnalisys/src/landmarks/: basic_landmarks.rs  bfs_landmarks.rs  mod.rs
NetAnalisys/src/parser/: directed_or_undirected.rs  file_type.rs  mod.rs  parse.rs  parse_from_csv.rs  parse_from_mtx.rs  parse_from_txt.rs  parser.rs
NetAnalisys/src/ui/: degree_graphic_printing.rs  degree_graphic_saving_in_png.rs  main_ui.rs  mod.rs
main/kotlin/: Solution1319.kt  Solution1584.kt  Solution207.kt  Solution2115.kt  Solution2192.kt  Solution3112.kt  Solution802.kt
solutions/src/: main.rs
src/: 1129.py  1319.c  1368.py  1591.cpp  1719.py  1728.cpp  1786.py  1857.cpp  2467.cpp  2492.py  2608.py  3112.py  3243.cpp  3310.cpp  3310.py  3387.cpp  797.py  851.py  analyzer.cpp  analyzer.h  general.h  graph.cpp  graph.h  lib.rs  task_886.rs
src/other/: other.cpp  other.h
src/parsers/: parser.cpp  parser.h
src/summarizer/: summarizer.cpp  summarizer.h
summarized/undirected/: Email-EuAll.json
tasks/: 1466.py  1514.py  1591.py  2977.py  3123.py  3387.py  399.py  785.py  797.py  886.py
tests/: task_886_test.rs  tests.h  tests_analyzer.cpp  tests_analyzer.h  tests_graph.cpp
(+11 files in other folders)
